# escoteirando.github.io

./: .gitignore  404.html  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  search.html
.github/workflows/: mkdocs.yml
01.arch/: index.html
80.bi/: index.html
90.projetos/: index.html
98.links/: index.html
diagrams/src/: architecture.puml
escoteirando/: .pre-commit-config.yaml  mkdocs.yml
escoteirando/docs/: 01.arch.md  80.bi.md  90.projetos.md  98.links.md  index.md
escoteirando/docs/diagrams/: architecture.puml
escoteirando/docs/diagrams/src/: architecture.puml  escoteirando_portal_uc.puml
search/: search_index.json
